# tsplib-json

./: README.md  main.py  pyproject.toml
benchmarks/json/: a280.json  ali535.json  att48.json  att532.json  bayg29.json  bays29.json  berlin52.json  bier127.json  brazil58.json  brg180.json  burma14.json  ch130.json  ch150.json  d15112.json  d18512.json  d198.json  d493.json  d657.json  dantzig42.json  dsj1000.json  eil101.json  eil51.json  eil76.json  fl417.json  fri26.json  gil262.json  gr120.json  gr137.json  gr17.json  gr202.json  gr21.json  gr229.json  gr24.json  gr431.json  gr48.json  gr666.json  gr96.json  hk48.json  kroA100.json  kroA150.json  (+47 more)
