[project]
name = "tsplib-json"
version = "0.1.0"
description = "Converts TSPLIB95 instance files to JSON format."
authors = [
    {name = "Skander Kort"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tsplib95 (>=0.7.1,<0.8.0)",
    "typer (>=0.20.0,<0.21.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
